--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,8 @@
-name: cling-ifes
+name: ifes-cpp
 channels:
   - QuantStack
   - conda-forge
 dependencies:
-  - xeus-cling=0.4.2
-  - xwidgets=0.11.0
+  - xeus-cling
+  - xtensor
   - notebook
-  - widgetsnbextension >=3.0.0
